# UnixInfo

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  main.cpp  makefile  system.sublime-workspace
include/: DirectoryInfo.h  Helper.h  Information.h  Module.h  Path.h  Process.h  ProcessInformation.h
src/: DirectoryInfo.cpp  Information.cpp  Module.cpp  Process.cpp  ProcessInformation.cpp
tests/: SharedObjectTest.cpp
